# xkcdget

./: .gitignore  Cargo.toml  Makefile  README.md  go.mod  go.sum  list.go  lists.go  main.go  shell.nix  test.sh  version-update-reminder.sh
lists/: adjectives  nouns  verbs
src/: main.rs  wordlist.rs  wordlists.rs
