[package]
name = "xkcdget"
version = "2.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rpassword = "7.4.0"
scrypt = { version = "0.11.0", default-features = false }
sha256 = { version = "1.6.0", default-features = false }
hex = "0.4.3"
